--- a/ETWMonitor Agent/ETWService/ETWAgent.csproj
+++ b/ETWMonitor Agent/ETWService/ETWAgent.csproj
@@ -170,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <Content Include="rules.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
