Suspicious DLL alerting

--- a/ETWMonitor Agent/ETWService/ETWAgent.csproj
+++ b/ETWMonitor Agent/ETWService/ETWAgent.csproj
@@ -178,5 +178,7 @@
       <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('packages\Microsoft.Diagnostics.Tracing.TraceEvent.3.0.5\build\Microsoft.Diagnostics.Tracing.TraceEvent.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.Diagnostics.Tracing.TraceEvent.3.0.5\build\Microsoft.Diagnostics.Tracing.TraceEvent.props'))" />
+    <Error Condition="!Exists('packages\vc110.wixproj.redist.0.1.1\build\vc110.wixproj.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\vc110.wixproj.redist.0.1.1\build\vc110.wixproj.redist.targets'))" />
   </Target>
+  <Import Project="packages\vc110.wixproj.redist.0.1.1\build\vc110.wixproj.redist.targets" Condition="Exists('packages\vc110.wixproj.redist.0.1.1\build\vc110.wixproj.redist.targets')" />
 </Project>
