--- a/ETWMonitor Agent/ETWService/packages.config
+++ b/ETWMonitor Agent/ETWService/packages.config
@@ -7,4 +7,5 @@
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
+  <package id="vc110.wixproj.redist" version="0.1.1" targetFramework="net472" />
 </packages>
